--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ book:
   date: 12/6/2023
   search: true
   page-navigation: true
-  repo-url: https://github.com/erikvvargas/portfolio
+  repo-url: https://github.com/erikvvargas/tidytuesdayprojects
   sidebar:
     tools:
       - icon: share-fill
@@ -23,6 +23,7 @@ book:
   chapters:
     - index.qmd
     - intro.qmd
+    - week_11-27-2023.qmd
 
 bibliography: references.bib
 
